@@ -1,6 +1,9 @@
 tag-0.2-20210709 JP
   - Apply most recent standard router methods
   - Change Type=Training Session to Type=Training
+  - Markup warnings now logged at debug level
+  - Fuzzy matches only printed at debug level
+  - Only match to Affiliation=xsede.org organizations
 
 tag-0.2-20210708 JP
   - Replace 'xsede.org' with 'info.xsede.org' in Warehouse_XDCDB_Training_Class_Session GlobalURN
